# DataclassDb

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: build_and_test.yml  release.yml
docs/source/: conf.py  index.rst  modules.rst
scripts/: generate_builder_files.py
src/dataclassdb/: __init__.py  _version.py  constants.py  dataclass_db.py  dataclass_field_codec.py  dataclass_sqlite_field.py  dataclass_sqlite_table.py  dataclass_types.py  db_engine.py  utils.py
src/dataclassdb/builders/: function_builder.py  list_utils.py  query_builder.py  statement_builder.py  string_builder.py
tests/: conftest.py  smoke-test.py  smoke_test.py  test_annotation_parsing.py  test_builders.py  test_current_cols.py  test_custom_codec.py  test_dataclass_db.py  test_dataclass_field_codec.py  test_dataclass_sqlite_codec.py  test_date_codec.py  test_db_engine.py  test_list_utils.py  test_no_primary.py  test_query_builder.py  test_string_builder.py  test_utils.py
